Fixed toList() function calls. Changed braces styling. Changed API method name